--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtdoc-opensource-src (5.15.7-1+dde) unstable; urgency=medium
+
+  * New upstream release (5.15.7).
+
+ -- Duan Ting <duanting@uniontech.com>  Tue, 15 Nov 2022 13:49:37 +0800
+
 qtdoc-opensource-src (5.15.3-1+dde) stable; urgency=medium
 
   * ['Rebuild  against by  current gcc 11.2']
